--- a/styles/main.css
+++ b/styles/main.css
@@ -24,6 +24,9 @@ light-blue
 sky-blue
 #bfdaed
 
+light-gray
+#e6e6e6
+
 font-gray
 #96989e
 
@@ -39,7 +42,6 @@ article {
 	position: relative;
 	width: 100%;
 	max-width: 1000px;
-
 	margin: 0 auto 0 auto;
 }
 
@@ -54,6 +56,14 @@ article {
 /* inline lists */
 .inline { margin: 0; padding: 0; list-style-type: none; }
 ul.inline, li.inline { font-size: 0; }
+
+/* text shadows */
+#header nav a:hover, .tab, .btn { text-shadow: 0 1px #000; }
+
+/* box shadows */
+#header nav .home a:hover, #header nav .create a:hover, #header nav .explore a:hover, .btn {
+	box-shadow: 0 1px #000;
+}
 
 /* transitions */
 .transition,
@@ -75,13 +85,11 @@ ul.inline, li.inline { font-size: 0; }
 #header nav { float: right; }
 #header nav li { 
 	margin: 0 4px 0 4px; 
-
 	color: #96989e;
 	font-size: 18px;
 }
 #header nav a {
 	padding: 0 8px 0 8px; 
-
 	text-decoration: none;
 	color: inherit;
 }
@@ -94,12 +102,13 @@ ul.inline, li.inline { font-size: 0; }
 
 /* icon hovers */
 #header nav .more a, #header nav .alerts a, #header nav .help a { color: #17181f; }
-#header nav a:hover { color: #f5f5f5; text-shadow: 0 1px #000; }
+#header nav a:hover { color: #f5f5f5; }
 #header nav .more a { background-color: #4e5881; }
 #header nav .more a:hover { background-color: #616d9e; }
 
 /* nav icon & tab hovers */
-#header nav .home a:hover, #header nav .create a:hover, #header nav .explore a:hover { height: 58px; border-radius: 0 0 4px 4px; box-shadow: 0 1px #000; }
+#header nav .home a:hover, #header nav .create a:hover, #header nav .explore a:hover { position: relative; z-index: 2; }
+#header nav .home a:hover, #header nav .create a:hover, #header nav .explore a:hover { height: 58px; border-radius: 0 0 4px 4px; }
 #header nav .home a:hover { background-color: #a430b2; }
 #header nav .create a:hover { background-color: #67b230; }
 #header nav .explore a:hover { background-color: #32acc6; }
@@ -108,6 +117,7 @@ ul.inline, li.inline { font-size: 0; }
 
 
 /* ============================================================================================================ Other Setup */
+/* latest styling */
 #latest-shell { 
 	height: 325px;
 	padding: 16px 0 16px 0;
@@ -117,7 +127,7 @@ ul.inline, li.inline { font-size: 0; }
 #latest { 
 	box-sizing: border-box;
 	height: 100%;
-	padding: 18px 8px 8px 8px;
+	padding: 18px 0 0 0;
 	background-color: #f5f5f5; 
 	border-bottom-left-radius: 2px; 
 	border-bottom-right-radius: 2px; 
@@ -137,15 +147,58 @@ ul.inline, li.inline { font-size: 0; }
 	border-bottom: 1px dashed #96989e;
 }
 #latest h1 {
-	margin-bottom: 8px;
+	margin: 3px 0 8px 8px;
 	color: #6f6f6f;
 	font-size: 18px;
 	font-weight: bold;
 }
-#latest table { width: 100%; padding: 0; margin: 0; }
-#latest th { 
-	padding: 2px; 
+#latest table { width: 100%; padding: 0; margin: 0; font-size: 14px; }
+#latest tr, #latest td.tab { height: 47px; }
+#latest tr:first-child { height: 10px; }
+#latest td, #latest th { padding: 2px 5px 2px 5px; }
+#latest th {
 	font-size: 10px;
 	font-style: oblique;
 	background-color: #bfdaed;
 }
+#latest tr:nth-child(odd) { background-color: #e6e6e6; }
+#latest .date { font-size: 10px; font-style: oblique; }
+#latest .description { font-size: 10px; }
+
+/* tab setups */
+.tab { 
+	position: relative;
+	width: 28px; 
+	padding: 0 !important; 
+	text-align: center; 
+	vertical-align: top; 
+}
+.tab div { 
+	position: absolute;
+	width: 20px; /* size of font */
+	height: 20px; /* size of font */
+	font-size: 20px !important; 
+	top: 0; right: 0; bottom: 0; left: 0;
+	margin: auto;
+	color: #fbfbfb;
+}
+
+/* ============================================================================================================ Button Setup */
+.btn {
+	padding: 6px 12px 6px 12px;
+	font-size: 16px;
+	font-weight: bold;
+	text-decoration: none;
+	color: #fbfbfb;
+	background-color: #4e5881;
+	border-radius: 4px;
+	border-top: 1px solid rgba(0, 0, 0, 0.15);
+	border-bottom: 2px solid rgba(255, 255, 255, 0.5);
+}
+.btn:hover {
+	background-image: url("../images/button_hover.png");
+}
+
+/* ============================================================================================================ Customizable Color Setup */
+.col-bg-orange { background-color: #f76117; }
+.col-border-orange { border-color: #f76117; }
