--- a/styles/main.css
+++ b/styles/main.css
@@ -35,7 +35,7 @@ font-dark-gray
 
 */
 /* ============================================================================================================ Main Page Setup */
-body, html { background-color: #e6e6e6; }
+body, html { height: 100%; background-color: #e6e6e6; }
 html { box-sizing: border-box; }
 *, *:before, *:after { box-sizing: inherit; }
 article { 
@@ -47,10 +47,10 @@ article {
 
 /* ============================================================================================================ Common Setup */
 /* full width */
-#latest-shell { width: 100%; }
+.full, #latest-shell { width: 100%; }
 
 /* display: inline-block; */
-#header a, #header nav, .inline li 
+#header a, #header nav, .inline li , .btn, #header nav .more img
 { display: inline-block; zoom: 1; *display: inline; vertical-align: top; }
 
 /* inline lists */
@@ -58,16 +58,16 @@ article {
 ul.inline, li.inline { font-size: 0; }
 
 /* text shadows */
-#header nav a:hover, .tab, .btn { text-shadow: 0 1px #000; }
+#header nav a:hover, .tab, .btn 
+{ text-shadow: 0 1px #000; }
 
 /* box shadows */
-#header nav .home a:hover, #header nav .create a:hover, #header nav .explore a:hover, .btn {
-	box-shadow: 0 1px #000;
-}
+#header nav .home a:hover, #header nav .create a:hover, #header nav .explore a:hover, .btn, #header nav .dropdown 
+{ box-shadow: 0 1px #000; }
 
 /* transitions */
 .transition,
-#header nav li a
+#header nav li a, #header nav .more, .btn:before, #header-drop
 {
 	transition-duration: 0.2s;
 	-moz-transition-duration: 0.2s;
@@ -75,36 +75,40 @@ ul.inline, li.inline { font-size: 0; }
 	-o-transition-duration: 0.2s;
 }
 
+/* ============================================================================================================ Initial Page Setup */
+#main-wrapper {
+	min-height: 100%;
+	margin: 0 auto -100px; /* footer height */
+}
+footer, #footer-push {
+	height: 100px; /* footer height */
+}
+
 /* ============================================================================================================ Header Setup */
-#header, #header a { height: 50px; line-height: 50px; }
+#header, #header li, #header a, #header-drop { height: 50px; line-height: 50px; }
 #header {
 	background-color: #2d303d;
 	border-bottom: 1px solid #4e5881;
 	box-shadow: 0 1px 0 #2d303d;
 }
-#header nav { float: right; }
-#header nav li { 
+#header nav { position: absolute; top: 0; right: 0; }
+#header nav li, #header-drop { 
 	margin: 0 4px 0 4px; 
 	color: #96989e;
-	font-size: 18px;
+	font-size: 16px;
 }
 #header nav a {
 	padding: 0 8px 0 8px; 
 	text-decoration: none;
 	color: inherit;
 }
-#header .logo { margin-top: 7px; }
-#header nav .avatar { margin-right: 0; }
-#header nav .avatar a { padding: 0; }
-#header nav .avatar img { max-height: 100%; }
-#header nav .more { margin: 0 0 0 1px; }
-#header nav .more a { padding: 0 4px 0 4px; }
+#header .logo { margin: 7px 8px 0 8px; }
+#header nav .more { margin: 0 0 0 1px; padding: 0 4px 0 2px; background-color: #4e5881; font-size: 14px; cursor: pointer; }
+#header nav .more img { height: 100%; padding-bottom: 1px; border-right: 1px solid #2D303D; }
 
 /* icon hovers */
-#header nav .more a, #header nav .alerts a, #header nav .help a { color: #17181f; }
-#header nav a:hover { color: #f5f5f5; }
-#header nav .more a { background-color: #4e5881; }
-#header nav .more a:hover { background-color: #616d9e; }
+#header nav .more, #header nav .alerts a, #header nav .help a { color: #17181f; }
+#header nav a:hover, #header nav .more.hover, #header nav .more.active, #header-drop.hover, #header-drop.active { color: #f5f5f5; }
 
 /* nav icon & tab hovers */
 #header nav .home a:hover, #header nav .create a:hover, #header nav .explore a:hover { position: relative; z-index: 2; }
@@ -113,21 +117,70 @@ ul.inline, li.inline { font-size: 0; }
 #header nav .create a:hover { background-color: #67b230; }
 #header nav .explore a:hover { background-color: #32acc6; }
 
-/* ============================================================================================================ Page Setup */
+/* dropdown for smaller screens */
+#header nav .dropdown, #header-drop { overflow: visible !important; display: none; }
+#header nav .dropdown {
+	position: absolute;
+	top: 50px; /* header height */ 
+	right: 0; 
+	margin: 12px 5px 0 0; 
+	padding: 0; 
+	white-space: nowrap;
+	list-style-type: none;
+	z-index: 2; 
+	background-color: #2d303d;
+	border-radius: 4px;
+}
+#header nav .dropdown:before {
+	position: absolute;
+	z-index: inherit;
+	width: 0; height: 0;
+	top: -10px; right: 4px;
+	margin: auto;
+	content: "";
+	border-left: 16px solid transparent;
+	border-right: 16px solid transparent;
+	border-bottom: 10px solid #2d303d;
+}
+#header nav .dropdown li { 
+	height: auto;
+	margin: 0;
+	font-size: 12px;
+	text-align: left;
+	line-height: normal;
+	border-bottom: 1px solid #43485A;
+}
+#header nav .dropdown a { height: auto; line-height: normal; margin: 0; padding: 0; }
+#header nav .dropdown .fa { min-width: 20px; margin-right: 8px; }
+#header nav .dropdown li:nth-child(even){ background-color: #353948; }
+#header nav .dropdown a { width: 100%; padding: 6px 24px 6px 8px; }
+#header nav .dropdown a:hover { background-color: #4e5881;}
+#header-drop {
+	margin: 0; 
+	padding: 0 18px 0 18px;
+	cursor: pointer;
+}
+#header-drop.hover, #header-drop.active { background-color: #4e5881; }
+#header-drop.active.fa:before { content: "\f00d"; font-size: 19px; } /* Changes nav bars to arrow */
+#header nav .more.hover, #header nav .more.active { background-color: #616d9e; }
+#header nav .more.active .fa:before { content: "\f00d"; font-size: 15px; } /* Changes nav bars to arrow */
 
+/* ============================================================================================================ Footer Setup */
+footer { background-color: #2d303d; color: #e6e6e6; }
+footer article { padding: 8px; }
 
 /* ============================================================================================================ Other Setup */
 /* latest styling */
 #latest-shell { 
-	height: 325px;
+	/* height: 344px; */
 	padding: 16px 0 16px 0;
 	background: #7d3075 url("../images/latest_bg.png") 12px 12px/48px 48px; 
 	border-bottom: 2px solid #2d303d;
 }
 #latest { 
 	box-sizing: border-box;
-	height: 100%;
-	padding: 18px 0 0 0;
+	/* height: 100%; */
+	padding: 18px 2px 2px 2px;
 	background-color: #f5f5f5; 
 	border-bottom-left-radius: 2px; 
 	border-bottom-right-radius: 2px; 
@@ -147,12 +200,12 @@ ul.inline, li.inline { font-size: 0; }
 	border-bottom: 1px dashed #96989e;
 }
 #latest h1 {
-	margin: 3px 0 8px 8px;
+	margin: 7px 0 8px 8px;
 	color: #6f6f6f;
 	font-size: 18px;
 	font-weight: bold;
 }
-#latest table { width: 100%; padding: 0; margin: 0; font-size: 14px; }
+#latest table { width: 100%; padding: 0; margin: 0; border-spacing: 0 2px; font-size: 14px; }
 #latest tr, #latest td.tab { height: 47px; }
 #latest tr:first-child { height: 10px; }
 #latest td, #latest th { padding: 2px 5px 2px 5px; }
@@ -162,8 +215,11 @@ ul.inline, li.inline { font-size: 0; }
 	background-color: #bfdaed;
 }
 #latest tr:nth-child(odd) { background-color: #e6e6e6; }
-#latest .date { font-size: 10px; font-style: oblique; }
+#latest .date, #latest .date-small { font-size: 10px; font-style: oblique; }
+#latest .date-small { display: none; }
 #latest .description { font-size: 10px; }
+#latest .view { width: 1%; }
+#latest .view-all { text-align: center; color: #6f6f6f; }
 
 /* tab setups */
 .tab { 
@@ -185,7 +241,10 @@ ul.inline, li.inline { font-size: 0; }
 
 /* ============================================================================================================ Button Setup */
 .btn {
+	position: relative;
+	/* height: 32px; */
 	padding: 6px 12px 6px 12px;
+	white-space: nowrap;
 	font-size: 16px;
 	font-weight: bold;
 	text-decoration: none;
@@ -195,10 +254,42 @@ ul.inline, li.inline { font-size: 0; }
 	border-top: 1px solid rgba(0, 0, 0, 0.15);
 	border-bottom: 2px solid rgba(255, 255, 255, 0.5);
 }
-.btn:hover {
-	background-image: url("../images/button_hover.png");
+.btn:before {
+	position: absolute;
+	z-index: 1;
+	width: 100%;
+	height: 100%;
+	top: 0; left: 0;
+	content: "";
+	background-color: rgba(255, 255, 255, 0);
+}
+.btn:hover:before { background-color: rgba(255, 255, 255, 0.25); }
+.btn-simple {
+	font-weight: normal;
+	text-shadow: none;
+	border-top: none;
+	border-bottom: none;
+	box-shadow: none;
 }
 
 /* ============================================================================================================ Customizable Color Setup */
+/* orange */
 .col-bg-orange { background-color: #f76117; }
 .col-border-orange { border-color: #f76117; }
+.col-font-orange { color: #f76117; }
+/* green */
+.col-bg-green { background-color: #28bf48; }
+.col-border-green { border-color: #28bf48; }
+.col-font-green { color: #28bf48; }
+/* blue */
+.col-bg-blue { background-color: #4A8CD0; }
+.col-border-blue { border-color: #4A8CD0; }
+.col-font-blue { color: #4A8CD0; }
+/* sky blue */
+.col-bg-skyblue { background-color: #bfdaed; }
+.col-border-skyblue { border-color: #bfdaed; }
+.col-font-skyblue { color: #bfdaed; }
+/* yellow */
+.col-bg-yellow { background-color: #E2B100; }
+.col-border-yellow { border-color: #E2B100; }
+.col-font-yellow { color: #E2B100; }
