--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,24 +1,40 @@
-/* Smaller than standard 960 (devices and browsers) */
-@media only screen and (max-width: 959px){
+@media only screen and (max-width: 960px){
 
 }
 
-/* Tablet Portrait size to standard 960 (devices and browsers) */
-@media only screen and (min-width: 768px) and (max-width: 959px){
-
+@media only screen and (max-width: 800px){
+	/* latest section */
+	#latest .description { display: none; }
+	#latest .view .fa:before { content: ""; }
+	/* tabs */
+	.tab { width: 5px; }
+	.tab .fa { display: none; }
 }
 
-/* All Mobile Sizes (devices and browser) */
-@media only screen and (max-width: 767px){
-
+@media only screen and (max-width: 700px){
+	/* header */
+	#header nav .dropdown li { font-size: 16px; }
+	/* latest section */
+	#latest .view .btn { font-size: 12px; }
+	/* tabs */
+	.tab { width: 2px; }
 }
 
-/* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
-@media only screen and (min-width: 480px) and (max-width: 767px){
-
+@media only screen and (max-width: 569px){
+	/* header */
+	#header nav .inline { display: none; }
+	#header-drop { display: block; }
+	#header nav .dropdown li { font-size: 18px; }
+	/* latest section */
+	#latest table { font-size: 10px; }
+	#latest td:nth-child(even) { padding: 1px 1px 1px 4px; background-color: rgba(0, 0, 0, 0.05); }
+	#latest .view .btn { font-size: 0; }
+	#latest .view .fa:before { content: "\f002"; font-size: 10px; }
+	#latest .date { display: none; }
+	#latest .date-small { display: block; }
 }
 
-/* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
-@media only screen and (max-width: 479px){
-	
+@media only screen and (max-width: 350px){
+	/* latest section */
+	#latest .lesson { display: none; }
 }
