--- a/styles/main.css
+++ b/styles/main.css
@@ -51,7 +51,7 @@ article {
 .full, #latest-shell { width: 100%; }
 
 /* display: inline-block; */
-#header a, #header nav, .inline li , .btn, #header nav .more img
+#header a, #header nav, .inline li , .btn, #header nav .more img, #header-drop img, .mini-tag
 { display: inline-block; zoom: 1; *display: inline; vertical-align: top; }
 
 /* inline lists */
@@ -59,11 +59,11 @@ article {
 ul.inline, li.inline { font-size: 0; }
 
 /* text shadows */
-#header nav a:hover, .tab, .btn 
+#header nav a:hover, .tab, .btn, .mini-tag  
 { text-shadow: 0 1px #000; }
 
 /* box shadows */
-.btn, #header nav .dropdown 
+.btn, #header nav .dropdown, .mini-tag 
 { box-shadow: 0 1px #000; }
 
 /* transitions */
@@ -107,11 +107,11 @@ footer, #footer-push {
 	color: inherit;
 }
 #header .logo { margin: 7px 8px 0 8px; }
-#header nav .more { margin: 0 0 0 1px; padding: 0 4px 0 2px; background-color: #4e5881; font-size: 14px; cursor: pointer; }
-#header nav .more img { height: 100%; padding-bottom: 1px; border-right: 1px solid #2D303D; }
+#header nav .more, #header-drop { min-width: 48px; margin: 0 0 0 1px; padding: 0 4px 0 2px; background-color: #4e5881; font-size: 14px; cursor: pointer; }
+#header nav .more img, #header-drop img { height: 100%; padding-bottom: 1px; border-right: 1px solid #2D303D; }
 
 /* icon hovers */
-#header nav .more { color: #17181f; }
+#header nav .more, #header-drop { color: #17181f; }
 #header nav a:hover, #header nav .more.hover, #header nav .more.active, #header-drop.hover, #header-drop.active { color: #f5f5f5; }
 
 /* nav icon & tab hovers */
@@ -148,6 +148,7 @@ nav li:after { /* nav tags */
 	z-index: 2; 
 	background-color: #2d303d;
 	border-radius: 4px;
+	box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.4);
 }
 #header nav .dropdown:before {
 	position: absolute;
@@ -171,15 +172,12 @@ nav li:after { /* nav tags */
 #header nav .dropdown .fa { min-width: 20px; margin-right: 8px; }
 #header nav .dropdown li:nth-child(even){ background-color: #353948; }
 #header nav .dropdown a { width: 100%; padding: 6px 24px 6px 8px; }
-#header-drop {
-	margin: 0; 
-	padding: 0 18px 0 18px;
-	cursor: pointer;
-}
+
+#header-drop { text-align: center; }
 #header-drop.hover, #header-drop.active { background-color: #4e5881; }
-#header-drop.active.fa:before { content: "\f00d"; font-size: 18px; } /* Changes nav bars to arrow */
-#header nav .more.hover, #header nav .more.active { background-color: #616d9e; }
-#header nav .more.active .fa:before { content: "\f00d"; font-size: 15px; } /* Changes nav bars to arrow */
+#header-drop .fa { width: 14px; }
+#header nav .more.hover, #header nav .more.active, #header-drop.hover { background-color: #616d9e; }
+#header nav .more.active .fa:before, #header-drop.active .fa:before { content: "\f00d"; font-size: 15px; } /* Changes nav bars to arrow */
 
 /* ============================================================================================================ Footer Setup */
 footer { background-color: #2d303d; color: #e6e6e6; }
@@ -286,6 +284,19 @@ footer article { padding: 8px; }
 	border-top: none;
 	border-bottom: none;
 	box-shadow: none;
+}
+
+/* ============================================================================================================ Other Setup */
+.mini-tag {
+	position: absolute;
+	bottom: -2px; right: -2px;
+	z-index: 2;
+	padding: 0 4px 0 4px;
+	line-height: normal;
+	font-size: 10px;
+	color: #fbfbfb;
+	border-radius: 2px;
+	border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 }
 
 /* ============================================================================================================ Customizable Color Setup */
