--- a/styles/main.css
+++ b/styles/main.css
@@ -41,7 +41,7 @@ html { box-sizing: border-box; }
 *, *:before, *:after { box-sizing: inherit; }
 article { 
 	position: relative;
-	width: 100%;
+	width: 98%;
 	max-width: 1000px;
 	margin: 0 auto 0 auto;
 }
@@ -59,16 +59,16 @@ article {
 ul.inline, li.inline { font-size: 0; }
 
 /* text shadows */
-#header nav a:hover, .tab, .btn, .mini-tag  
+#header nav li a:hover, .tab, .btn, .mini-tag, input[type="submit"], input[type="button"]  
 { text-shadow: 0 1px #000; }
 
 /* box shadows */
-.btn, #header nav .dropdown, .mini-tag 
+.btn, #header nav .dropdown, .mini-tag, input[type="submit"], input[type="button"], .notice 
 { box-shadow: 0 1px #000; }
 
 /* transitions */
 .transition,
-#header nav li a, #header nav .more, .btn:before, #header-drop, #header nav li:after
+#header nav li a, #header nav .more, .btn:before, #header-drop, #header nav li:after, .flex_table label, .flex_table input, .flex_table label:before, .notice .fa
 {
 	transition-duration: 0.2s;
 	-moz-transition-duration: 0.2s;
@@ -84,6 +84,18 @@ ul.inline, li.inline { font-size: 0; }
 footer, #footer-push {
 	height: 100px; /* footer height */
 }
+
+/* inputs */
+input[type="text"], input[type="email"], input[type="password"] { 
+	padding: 8px;
+	border: 1px solid rgba(0, 0, 0, 0.15);
+	border-radius: 4px; 
+	box-shadow: 0 1px #000;
+}
+input[type="text"]:focus, .flex_table input[type="text"].hover,
+input[type="email"]:focus, .flex_table input[type="email"].hover,
+input[type="password"]:focus, .flex_table input[type="password"].hover
+{ background-color: #FDFFDB; border: 1px solid rgba(0, 0, 0, 0.3); }
 
 /* ============================================================================================================ Header Setup */
 #header, #header li, #header a, #header-drop { height: 50px; line-height: 50px; }
@@ -112,7 +124,7 @@ footer, #footer-push {
 
 /* icon hovers */
 #header nav .more, #header-drop { color: #17181f; }
-#header nav a:hover, #header nav .more.hover, #header nav .more.active, #header-drop.hover, #header-drop.active { color: #f5f5f5; }
+#header nav li a:hover, #header nav .more.hover, #header nav .more.active, #header-drop.hover, #header-drop.active { color: #f5f5f5; }
 
 /* nav icon & tab hovers */
 nav li:after { /* nav tags */
@@ -175,13 +187,46 @@ nav li:after { /* nav tags */
 
 #header-drop { text-align: center; }
 #header-drop.hover, #header-drop.active { background-color: #4e5881; }
-#header-drop .fa { width: 14px; }
+#header-drop .fa, #header nav .more .fa { width: 14px; }
 #header nav .more.hover, #header nav .more.active, #header-drop.hover { background-color: #616d9e; }
 #header nav .more.active .fa:before, #header-drop.active .fa:before { content: "\f00d"; font-size: 15px; } /* Changes nav bars to arrow */
 
 /* ============================================================================================================ Footer Setup */
 footer { background-color: #2d303d; color: #e6e6e6; }
 footer article { padding: 8px; }
+
+/* ============================================================================================================ Custom Table Setup */
+.flex_table, .flex_tr, .flex_td { position: relative; display:flex; }
+.flex_table, .flex_tr { width: 100%; }
+.flex_table { 
+	flex-flow: column nowrap;
+	justify-content: space-between;
+}
+.flex_tr { 
+	flex-flow: row nowrap;
+	padding: 4px 0 4px 0;
+}
+.flex_td { 
+	flex-flow: row wrap;
+	flex-grow: 1;
+	flex-basis: 0;
+	padding: 0 4px 0 4px;
+}
+.flex_small { flex-basis: 15%; flex-grow: inherit;}
+
+.flex_table label { width: 100%; z-index: 0; padding: 0 0 0 8px; line-height: 30px; }
+.flex_table label:before { 
+	position: absolute;
+	z-index: -1;
+	width: 4px;
+	height: 100%;
+	top: 0; left: 0;
+	content: "";
+	background-color: #C9DBEF; 
+	border-radius: 0 4px 4px 0;
+	border-left: 2px solid rgba(0, 0, 0, 0.1);
+}
+.flex_table label.hover:before { width: 100%; }
 
 /* ============================================================================================================ Other Setup */
 /* latest styling */
@@ -254,19 +299,20 @@ footer article { padding: 8px; }
 }
 
 /* ============================================================================================================ Button Setup */
-.btn {
+.btn, input[type="submit"], input[type="button"] {
 	position: relative;
 	/* height: 32px; */
 	padding: 6px 12px 6px 12px;
 	white-space: nowrap;
 	font-size: 16px;
-	font-weight: bold;
 	text-decoration: none;
 	color: #fbfbfb;
 	background-color: #4e5881;
 	border-radius: 4px;
+	border: 0;
 	border-top: 1px solid rgba(0, 0, 0, 0.15);
 	border-bottom: 2px solid rgba(255, 255, 255, 0.5);
+	cursor: pointer;
 }
 .btn:before {
 	position: absolute;
@@ -277,7 +323,7 @@ footer article { padding: 8px; }
 	content: "";
 	background-color: rgba(255, 255, 255, 0);
 }
-.btn:hover:before { background-color: rgba(255, 255, 255, 0.25); }
+.btn:hover:before, .btn.hover:before { background-color: rgba(255, 255, 255, 0.25); }
 .btn-simple {
 	font-weight: normal;
 	text-shadow: none;
@@ -285,6 +331,7 @@ footer article { padding: 8px; }
 	border-bottom: none;
 	box-shadow: none;
 }
+input[type="submit"].hover, input[type="button"].hover { opacity: 0.75; }
 
 /* ============================================================================================================ Other Setup */
 .mini-tag {
@@ -298,37 +345,76 @@ footer article { padding: 8px; }
 	border-radius: 2px;
 	border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 }
+/* notices */
+.notice {
+	position: relative;
+	overflow: hidden;
+	width: 100%;
+	margin: 4px 0 4px 0;
+	padding: 8px;
+	font-size: 10px;
+	background-color: #fbfbfb;
+	border: 1px solid rgba(0, 0, 0, 0.35);
+	border-radius: 4px;
+}
+.notice.fa:before {
+	margin-right: 8px;
+	padding-right: 8px;
+	font-size: 14px;
+	border-right: 1px dashed rgba(0, 0, 0, 0.15);
+}
+.notice .fa {
+	position: absolute;
+	width: 100%; height: 100%;
+	top: 0; right: 0;
+	padding-left: 8px;
+	font-size: 14px;
+	cursor: pointer;
+}
+.notice .fa:before {
+	position: absolute;
+	right: 0; top: 0;
+	padding: 7px;
+	color: rgba(0, 0, 0, 0.35);
+}
+.notice:hover .fa:before { color: black; }
+.notice .fa:hover { background-color: rgba(255, 255, 255, 0.35); }
+.notice.alert { background-color: #FFFBC9; }
+.notice.error { background-color: #FF9E9E; }
+.notice.success { background-color: #BCFFB8; }
+.notice.error.fa:before { content: "\f071"; }
+.notice.success.fa:before { content: "\f00c"; }
 
 /* ============================================================================================================ Customizable Color Setup */
 /* green */
-.col-bg-green, .explore:after { background-color: #28bf48; }
+.col-bg-green, .explore:after { background-color: #28bf48 !important; }
 .col-border-green { border-color: #28bf48; }
 .col-font-green { color: #28bf48; }
 /* sky blue */
-.col-bg-sky-blue { background-color: #bfdaed; }
+.col-bg-sky-blue { background-color: #bfdaed !important; }
 .col-border-sky-blue { border-color: #bfdaed; }
 .col-font-sky-blue { color: #bfdaed; }
 /* blue */
-.col-bg-blue, .create:after { background-color: #4A8CD0; }
+.col-bg-blue, .create:after { background-color: #4A8CD0 !important; }
 .col-border-blue { border-color: #4A8CD0; }
 .col-font-blue { color: #4A8CD0; }
 /* purple */
-.col-bg-purple, .home:after { background-color: #C145D0; }
+.col-bg-purple, .home:after { background-color: #C145D0 !important; }
 .col-border-purple { border-color: #C145D0; }
 .col-font-purple { color: #C145D0; }
 /* yellow */
-.col-bg-yellow, #header .alerts:after { background-color: #D2CC07; }
+.col-bg-yellow, #header .alerts:after { background-color: #D2CC07 !important; }
 .col-border-yellow { border-color: #D2CC07; }
 .col-font-yellow { color: #D2CC07; }
 /* orange */
-.col-bg-orange, #header .account:after { background-color: #E2B100; }
+.col-bg-orange, #header .account:after { background-color: #E2B100 !important; }
 .col-border-orange { border-color: #E2B100; }
 .col-font-orange { color: #E2B100; }
 /* orange-red */
-.col-bg-orange-red, #header .help:after { background-color: #f76117; }
+.col-bg-orange-red, #header .help:after { background-color: #f76117 !important; }
 .col-border-orange-red { border-color: #f76117; }
 .col-font-orange-red { color: #f76117; }
 /* red */
-.col-bg-red, #header .logout:after { background-color: #C73232; }
+.col-bg-red, #header .logout:after { background-color: #C73232 !important; }
 .col-border-red { border-color: #C73232; }
 .col-font-red { color: #C73232; }
