--- a/includes/emails/verify-resend.html
+++ b/includes/emails/verify-resend.html
@@ -1,11 +1,6 @@
-<strong>Welcome!</strong>
+<strong>Planling Verification Code</strong>
 <br>
-Thank you for joining Planling! As our newest hatchling, we welcome you and hope you have a hoot-of-a-time. We are excited to have you as a part of our community and we can't wait to see what you create!
-<br>
-<br>
-<strong>What's next?</strong>
-<br>
-There is one last step you can take to help make your experience take flight with us:
+A new verification code was requested for your account at Planling. Please click the following button to verify your Planling account:
 <br>
 <!-- button -->
 <table class="btn-primary" cellpadding="0" cellspacing="0" border="0" style="font-family: &quot;Helvetica Neue&quot;, &quot;Helvetica&quot;, Helvetica, Arial, sans-serif;margin: 10px 0 14px 0;padding: 0;border-spacing: 0;width: auto !important;">
@@ -19,6 +14,3 @@ There is one last step you can take to help make your experience take flight wit
 If the button above does not work for you, please try the following link:
 <br>
 <a href="{{%LINK%}}">{{%LINK%}}</a>
-<br>
-<br>
-Take care, and please don't hesitate to contact us with any questions! <a href="http://planling.com/contact">You can drop us a hoot here</a>.
