--- a/styles/main.css
+++ b/styles/main.css
@@ -160,7 +160,7 @@ nav li:after { /* nav tags */
 	padding: 0; 
 	white-space: nowrap;
 	list-style-type: none;
-	z-index: 2; 
+	z-index: 11; 
 	background-color: #2d303d;
 	border-radius: 4px;
 	box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.4);
@@ -183,6 +183,8 @@ nav li:after { /* nav tags */
 	text-align: left;
 	line-height: normal;
 }
+#header nav .dropdown li:first-child { margin-top: 6px; border-top: 1px solid #292B31; }
+#header nav .dropdown li:last-child { margin-bottom: 6px; border-bottom: 1px solid #292B31; }
 #header nav .dropdown a { height: auto; line-height: normal; margin: 0; padding: 0; }
 #header nav .dropdown .fa { min-width: 20px; margin-right: 8px; }
 #header nav .dropdown li:nth-child(even){ background-color: #353948; }
